Fixed MANTIS-4387 (Dark mode fixes)

--- a/themes/default/css/email.css
+++ b/themes/default/css/email.css
@@ -7,6 +7,7 @@
 	font-size: 13px;
 
 	background: {$GET,area_5_background};
+	color: {$GET,slightly_seeded_text};
 	padding: 1em;
 	border: 1px solid {$GET,pale_border};
 }
